# chatfx

./: .gitignore  README.md  cdemo.py  chat.py  colors.json  colors.md  definitions.py  direwolf.sh  fix  go.py  install.sh  listen.py  pyproject.toml  receive.py  requirements.txt  run.py  send.py  tryb.py
.config/: requirements.in
.github/workflows/: publish.yml
podman/: Containerfile  build.sh  runc.sh
src/: chat.py
src/chatfx/: __init__.py  _version.py  arg_parse.py  chat.py  cli.py  colors.py  definitions.py  output.py  run.py  ui.py  utils.py
